--- a/index.html
+++ b/index.html
@@ -111,22 +111,33 @@
 
     .card-wrapper {
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      display: grid;
       gap: var(--spacing-400, 2rem);
+      justify-items: center;
+      
+      /* Mobile: single column, specific order */
+      grid-template-columns: 1fr;
+      grid-template-areas:
+        "supervisor"
+        "team-builder"
+        "karma"
+        "calculator";
     }
 
-    .card-wrapper .middle-layer {
-      display: flex;
-      flex-direction: column;
-      gap: var(--spacing-400, 2rem);
-      @media( 768px <= width <= 1440px ) {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        gap: var(--spacing-400, 2rem);
+    /* Assign grid areas to each card */
+    .card.supervisor { grid-area: supervisor; }
+    .card.team-builder { grid-area: team-builder; }
+    .card.karma { grid-area: karma; }
+    .card.calculator { grid-area: calculator; }
+
+    /* Tablet: 2-column layout */
+    @media (768px <= width <= 1440px) {
+      .card-wrapper {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+          "team-builder team-builder"
+          "supervisor karma"
+          "calculator calculator";
       }
     }
 
@@ -244,27 +255,24 @@
         </div>
       </div>
 
-      <div class="middle-layer">
-
-        <div class="card bar team-builder">
-          <div class="title-container">
-            <h1>Team Builder</h1>
-            <p>Scans our talent network to create the optimal team for your project</p>
-          </div>
-          <div class="image-container">
-            <img src="./images/icon-team-builder.svg" alt="icon-team-builder">
-          </div>
+      <div class="card bar team-builder">
+        <div class="title-container">
+          <h1>Team Builder</h1>
+          <p>Scans our talent network to create the optimal team for your project</p>
         </div>
-        <div class="card bar karma">
-          <div class="title-container">
-            <h1>Karma</h1>
-            <p>Regularly evaluates our talent to ensure quality</p>
-          </div>
-          <div class="image-container">
-            <img src="./images/icon-karma.svg" alt="icon-karma">
-          </div>
+        <div class="image-container">
+          <img src="./images/icon-team-builder.svg" alt="icon-team-builder">
         </div>
+      </div>
 
+      <div class="card bar karma">
+        <div class="title-container">
+          <h1>Karma</h1>
+          <p>Regularly evaluates our talent to ensure quality</p>
+        </div>
+        <div class="image-container">
+          <img src="./images/icon-karma.svg" alt="icon-karma">
+        </div>
       </div>
 
       <div class="card bar calculator">
