fix tiny paragraph issue

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
       @media( 768px <= width <= 1440px){
         max-width: 33.75rem;
       }
+      @media (width >= 1441px) {
+        max-width: 33.75rem;
+      }
     }
 
     .title-wrapper h1 {
